# tc69

./: LICENSE  README.md
case/: tc69-case-2-Base.stl  tc69-case-2-Lid.stl  tc69-case-2.FCStd  tc69-case-Base.3mf  tc69-case-Base.step  tc69-case-Base.stl  tc69-case-Lid.3mf  tc69-case-Lid.step  tc69-case-Lid.stl  tc69-case.FCStd
firmware/: README.md
firmware/pico/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
firmware/sketch_keyboard/: adc.ino  asym_eager_defer_pk.ino  keymap.h  nicola.ino  nicola_keyboard.h  sense.ino  sketch_keyboard.h  sketch_keyboard.ino
firmware/sketch_keyboard/lib/: README.md
firmware/sketch_tester/: sketch_jan11a.ino
pcb/: CapacitivePad.FCStd  README.md  fp-lib-table  sym-lib-table  tc69-cache.lib  tc69.kicad_pcb  tc69.kicad_pro  tc69.kicad_sch  tc69.pro  tc69.sch
pcb/CapacitivePad.pretty/: CapacitivePad.kicad_mod
pcb/gerber/: tc69-B_Cu.gbl  tc69-B_Mask.gbs  tc69-B_Paste.gbp  tc69-B_SilkS.gbo  tc69-Edge_Cuts.gm1  tc69-F_Cu.gtl  tc69-F_Mask.gts  tc69-F_Paste.gtp  tc69-F_SilkS.gto  tc69-NPTH-drl_map.gbr  tc69-NPTH.drl  tc69-PTH-drl_map.gbr  tc69-PTH.drl  tc69-bottom-pos.csv  tc69.csv
pcb/jlcpcb/: project.db
pcb/jlcpcb/assembly/: BOM-tc69.csv  POS-tc69.csv
pcb/jlcpcb/gerber/: tc69-CuBottom.gbr  tc69-CuTop.gbr  tc69-EdgeCuts.gbr  tc69-MaskBottom.gbr  tc69-MaskTop.gbr  tc69-NPTH.drl  tc69-PTH.drl  tc69-PasteBottom.gbr  tc69-PasteTop.gbr  tc69-SilkBottom.gbr  tc69-SilkTop.gbr
pcb/lib/: ec_sw.lib
plate/: README.md  plate.FCStd  tc69_plate.dxf
